feat: extracted color configuration to properties, need to investigate why JavaFX is not applying them